--- a/mania/sciencemania-modern.html
+++ b/mania/sciencemania-modern.html
@@ -576,6 +576,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { openArticle, formatDate } from '/js/shared-utils.js';
 
         let currentArticles = [];
         let filteredArticles = [];
