--- a/submit-games.html
+++ b/submit-games.html
@@ -397,6 +397,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { uploadToImgbb, showNotification } from '/js/upload-utils.js';
 
         // Wait for Firebase to be ready
         window.addEventListener('load', async () => {
@@ -488,13 +489,20 @@
 
                 updateProgress(50, 'Processando conteúdo...');
 
-                // Handle image upload if provided
+                // Handle image upload if provided - now using imgbb
                 const imageFile = document.getElementById('image').files[0];
                 if (imageFile) {
-                    updateProgress(70, 'Enviando imagem...');
-                    const imageRef = window.firebaseStorage.ref(window.firebaseStorage.storage, `games-images/${Date.now()}-${imageFile.name}`);
-                    const snapshot = await window.firebaseStorage.uploadBytes(imageRef, imageFile);
-                    formData.imageUrl = await window.firebaseStorage.getDownloadURL(snapshot.ref);
+                    updateProgress(70, 'Enviando imagem para imgbb...');
+                    try {
+                        formData.imageUrl = await uploadToImgbb(imageFile, (progress) => {
+                            updateProgress(70 + (progress * 0.15), 'Enviando imagem...');
+                        });
+                        showMessage('Imagem enviada com sucesso!', 'success');
+                    } catch (error) {
+                        console.error('Erro ao enviar imagem:', error);
+                        showMessage('Erro ao enviar imagem: ' + error.message, 'error');
+                        throw error;
+                    }
                 }
                 
                 updateProgress(85, 'Salvando artigo...');
