--- a/mania/techmania-modern.html
+++ b/mania/techmania-modern.html
@@ -511,6 +511,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { openArticle, formatDate } from '/js/shared-utils.js';
 
         let currentArticles = [];
         let filteredArticles = [];
@@ -648,52 +649,103 @@
             });
         }
 
-        window.openArticle = function(articleId) {
-            console.log('Opening article:', articleId);
-            // Implementar modal de abertura de artigo
-            const modal = document.createElement('div');
-            modal.className = 'modal active';
-            modal.innerHTML = `
-                <div class="modal-content">
-                    <button class="close-btn" onclick="this.parentElement.parentElement.remove()">&times;</button>
-                    <div class="modal-body">
-                        <p>Carregando artigo...</p>
-                    </div>
-                </div>
-            `;
-            document.body.appendChild(modal);
+        async function openArticle(articleId) {
+            try {
+                const article = currentArticles.find(a => a.id === articleId);
+                if (!article) {
+                    console.error('Artigo não encontrado');
+                    return;
+                }
 
-            // Fetch and display article details
-            window.firebaseDB.getDoc(window.firebaseDB.doc(window.firebaseDB.db, 'tech-articles', articleId))
-                .then(docSnap => {
-                    if (docSnap.exists()) {
-                        const article = docSnap.data();
-                        const modalBody = modal.querySelector('.modal-body');
-                        modalBody.innerHTML = `
-                            <h2>${article.title}</h2>
-                            ${article.imageUrl ? `<img src="${article.imageUrl}" alt="${article.title}">` : ''}
-                            <p>${article.content}</p>
-                            <div class="article-meta">
-                                <div class="article-author">
-                                    <i class="fas fa-user"></i>
-                                    <span>${article.author}</span>
-                                </div>
-                                <div class="article-stats">
-                                    <span><i class="fas fa-eye"></i> ${article.views || 0}</span>
-                                    <span><i class="fas fa-heart"></i> ${article.likes || 0}</span>
-                                </div>
+                // Increment view count
+                try {
+                    const articleRef = window.firebaseDB.doc(window.firebaseDB.db, 'tech-articles', articleId);
+                    await window.firebaseDB.updateDoc(articleRef, {
+                        views: window.firebaseDB.increment(1)
+                    });
+                    article.views = (article.views || 0) + 1;
+                } catch (error) {
+                    console.error('Erro ao atualizar visualizações:', error);
+                }
+
+                showArticleModal(article);
+            } catch (error) {
+                console.error('Erro ao abrir artigo:', error);
+            }
+        }
+
+        function showArticleModal(article) {
+            let modal = document.getElementById('articleModal');
+            if (!modal) {
+                modal = document.createElement('div');
+                modal.id = 'articleModal';
+                modal.className = 'modal';
+                modal.innerHTML = `
+                    <div class="modal-content">
+                        <button class="modal-close" onclick="closeModal()">
+                            <i class="fas fa-times"></i>
+                        </button>
+                        <div class="modal-image" id="modalImage"></div>
+                        <div class="modal-body">
+                            <h2 class="modal-title" id="modalTitle"></h2>
+                            <div class="modal-meta">
+                                <span><i class="fas fa-user"></i> <span id="modalAuthor"></span></span>
+                                <span><i class="fas fa-calendar"></i> <span id="modalDate"></span></span>
+                                <span><i class="fas fa-eye"></i> <span id="modalViews"></span> visualizações</span>
+                                <span><i class="fas fa-heart"></i> <span id="modalLikes"></span> curtidas</span>
                             </div>
-                        `;
-                    } else {
-                        console.error('No such document!');
-                        modal.querySelector('.modal-body').innerHTML = '<p>Erro ao carregar o artigo.</p>';
-                    }
-                })
-                .catch(error => {
-                    console.error('Error getting article:', error);
-                    modal.querySelector('.modal-body').innerHTML = '<p>Erro ao carregar o artigo.</p>';
-                });
-        };
+                            <div class="modal-content-text" id="modalContent"></div>
+                            <div class="modal-tags" id="modalTags"></div>
+                            <div id="modalSource" style="margin-top: 1rem;"></div>
+                        </div>
+                    </div>
+                `;
+                document.body.appendChild(modal);
+            }
+
+            document.getElementById('modalTitle').textContent = article.title || 'Título Indisponível';
+            document.getElementById('modalAuthor').textContent = article.author || 'Anônimo';
+            document.getElementById('modalDate').textContent = formatDate(article.createdAt);
+            document.getElementById('modalViews').textContent = article.views || 0;
+            document.getElementById('modalLikes').textContent = article.likes || 0;
+            document.getElementById('modalContent').innerHTML = (article.content || 'Conteúdo indisponível').replace(/\n/g, '<br>');
+
+            const modalImage = document.getElementById('modalImage');
+            if (article.imageUrl) {
+                modalImage.style.backgroundImage = `url('${article.imageUrl}')`;
+                modalImage.style.display = 'block';
+            } else {
+                modalImage.style.display = 'none';
+            }
+
+            const tagsContainer = document.getElementById('modalTags');
+            if (article.tags && article.tags.length > 0) {
+                tagsContainer.innerHTML = article.tags.map(tag => 
+                    `<span class="tag">#${tag}</span>`
+                ).join('');
+                tagsContainer.style.display = 'flex';
+            } else {
+                tagsContainer.innerHTML = '';
+                tagsContainer.style.display = 'none';
+            }
+
+            const sourceDiv = document.getElementById('modalSource');
+            if (article.source) {
+                sourceDiv.innerHTML = `<p><i class="fas fa-link"></i> Fonte: <a href="${article.source}" target="_blank" rel="noopener">${article.source}</a></p>`;
+                sourceDiv.style.display = 'block';
+            } else {
+                sourceDiv.style.display = 'none';
+            }
+
+            modal.classList.add('active');
+        }
+
+        function closeModal() {
+            const modal = document.getElementById('articleModal');
+            if (modal) {
+                modal.classList.remove('active');
+            }
+        }
 
         window.toggleFavorites = function() {
             console.log('Toggle favorites');
