--- a/submit-eco.html
+++ b/submit-eco.html
@@ -371,6 +371,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { uploadToImgbb, showNotification } from '/js/upload-utils.js';
 
         // Wait for Firebase to be ready
         window.addEventListener('load', async () => {
@@ -451,12 +452,17 @@
                     status: 'published'
                 };
 
-                // Handle image upload if provided
+                // Handle image upload if provided - now using imgbb
                 const imageFile = document.getElementById('image').files[0];
                 if (imageFile) {
-                    const imageRef = window.firebaseStorage.ref(window.firebaseStorage.storage, `eco-images/${Date.now()}-${imageFile.name}`);
-                    const snapshot = await window.firebaseStorage.uploadBytes(imageRef, imageFile);
-                    formData.imageUrl = await window.firebaseStorage.getDownloadURL(snapshot.ref);
+                    try {
+                        formData.imageUrl = await uploadToImgbb(imageFile);
+                        showMessage('Imagem enviada com sucesso!', 'success');
+                    } catch (error) {
+                        console.error('Erro ao enviar imagem:', error);
+                        showMessage('Erro ao enviar imagem: ' + error.message, 'error');
+                        throw error;
+                    }
                 }
 
                 // Save to Firestore
