--- a/submit-sports.html
+++ b/submit-sports.html
@@ -414,6 +414,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { uploadToImgbb, showNotification } from '/js/upload-utils.js';
 
         // Wait for Firebase to be ready
         window.addEventListener('load', async () => {
@@ -506,19 +507,29 @@
 
                 updateProgress(50, 'Processando conteúdo...');
 
-                // Handle image upload if provided
+                // Handle image upload if provided - now using imgbb
                 const imageFile = document.getElementById('image').files[0];
                 if (imageFile) {
-                    updateProgress(70, 'Enviando imagem...');
-                    const imageRef = window.firebaseStorage.ref(window.firebaseStorage.storage, `sports-images/${Date.now()}-${imageFile.name}`);
-                    const snapshot = await window.firebaseStorage.uploadBytes(imageRef, imageFile);
-                    formData.imageUrl = await window.firebaseStorage.getDownloadURL(snapshot.ref);
+                    updateProgress(70, 'Enviando imagem para imgbb...');
+                    try {
+                        formData.imageUrl = await uploadToImgbb(imageFile, (progress) => {
+                            updateProgress(70 + (progress * 0.15), 'Enviando imagem...');
+                        });
+                        showMessage('Imagem enviada com sucesso!', 'success');
+                    } catch (error) {
+                        console.error('Erro ao enviar imagem:', error);
+                        showMessage('Erro ao enviar imagem: ' + error.message, 'error');
+                        throw error;
+                    }
                 }
 
                 updateProgress(85, 'Salvando artigo...');
 
-                // Save to Firestore
-                await window.firebaseDB.addDoc(window.firebaseDB.collection(window.firebaseDB.db, 'sports-articles'), formData);
+                // Save to Firestore with 'sports-articles' collection
+            const docRef = await window.firebaseDB.addDoc(
+                window.firebaseDB.collection(window.firebaseDB.db, 'sports-articles'),
+                formData
+            );
 
                 updateProgress(100, 'Pesquisa publicada!');
 
@@ -962,6 +973,7 @@
 
     <script type="module">
         import '/firebase-config.js';
+        import { uploadToImgbb, showNotification } from '/js/upload-utils.js';
 
         // Wait for Firebase to be ready
         window.addEventListener('load', async () => {
@@ -1053,13 +1065,20 @@
 
                 updateProgress(50, 'Processando conteúdo...');
 
-                // Handle image upload if provided
+                // Handle image upload if provided - now using imgbb
                 const imageFile = document.getElementById('image').files[0];
                 if (imageFile) {
-                    updateProgress(70, 'Enviando imagem...');
-                    const imageRef = window.firebaseStorage.ref(window.firebaseStorage.storage, `sports-images/${Date.now()}-${imageFile.name}`);
-                    const snapshot = await window.firebaseStorage.uploadBytes(imageRef, imageFile);
-                    formData.imageUrl = await window.firebaseStorage.getDownloadURL(snapshot.ref);
+                    updateProgress(70, 'Enviando imagem para imgbb...');
+                    try {
+                        formData.imageUrl = await uploadToImgbb(imageFile, (progress) => {
+                            updateProgress(70 + (progress * 0.15), 'Enviando imagem...');
+                        });
+                        showMessage('Imagem enviada com sucesso!', 'success');
+                    } catch (error) {
+                        console.error('Erro ao enviar imagem:', error);
+                        showMessage('Erro ao enviar imagem: ' + error.message, 'error');
+                        throw error;
+                    }
                 }
 
                 updateProgress(85, 'Salvando artigo...');
